Spillover resolved, colour location of divs.

--- a/private/styles/style.scss
+++ b/private/styles/style.scss
@@ -1,13 +1,12 @@
 .header {
     width: 100%;
     height: 45px;
-    border: black 0.1em solid;
+    background-color:teal;
 }
 
 .content-container {
     width:100%;
     height:300px;
-    border:2px green solid;
     background-color:red;
 }
 
@@ -15,6 +14,6 @@
     float: right;
     width:300;
     height:435;
-    margin: 0 5 0 5;
-    border: solid blue 2px;
+    margin: 0 0 0 5;
+    background-color:blue;
 }
